build: bump java version